--- a/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.html
@@ -39,7 +39,7 @@
 			(click)="toggleImageryPerspective()"
 			[attr.tooltip-value]="orientation | translate"
 			tooltip-class="bottom right">
-		<i class="icon-status-bar-orientation small" [class.active]="perspective"></i>
+		<i class="icon-status-bar-orientation" [class.active]="perspective"></i>
 	</button>
 
 	<ng-container
