--- a/src/app/@ansyn/ansyn/modules/status-bar/less/status-bar-common.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/less/status-bar-common.less
@@ -1,6 +1,7 @@
 @import "ansyn/less/globals";
 @import "ansyn/less/colors";
 
+@search-panel-popup-top: 102%;
 .status-bar-panel {
 	display: flex;
 	align-items: center;
