--- a/src/app/@ansyn/ansyn/modules/status-bar/components/location-picker/location-picker.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/location-picker/location-picker.component.less
@@ -1,5 +1,6 @@
 @import "ansyn/less/colors";
 @import "ansyn/less/common";
+@import "../../less/status-bar-common";
 
 :host {
 	display: flex;
@@ -7,10 +8,9 @@
 	white-space: nowrap;
 	align-items: center;
 	padding: 5px;
-	top: 0;
+	top: @search-panel-popup-top;
 	min-height: 30px;
 	border-radius: 5px;
-	transform: translateY(calc(100% + 8px));
 	background: @background-color-0;
 
 	span.title {
