--- a/src/app/@ansyn/ansyn/modules/status-bar/components/timepicker-presets/timepicker-presets.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/timepicker-presets/timepicker-presets.component.less
@@ -1,12 +1,12 @@
 @import "ansyn/less/colors";
-
+@import "../../less/status-bar-common";
 :host {
 
 	div.presets {
 		background-color: black;
 		width: 100px;
 		position: absolute;
-		top: 51px;
+		top: @search-panel-popup-top;
 		min-width: 150px;
 		min-height: 110px;
 
