fixing the active class from add to favorite from missing

--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.less
@@ -68,6 +68,12 @@
 				margin-left: 10px;
 			}
 
+			i {
+				&.active {
+					color: @application-primary-color;
+				}
+			}
+
 			.button {
 				font-size: 13px;
 				padding-right: 10px;
