--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
@@ -1,11 +1,11 @@
+
 <!-- Geo filter -->
-<div class="box" id="geoPreSearch"
-	 [attr.tooltip-value]="statusBarConfig?.toolTips?.geoFilter | translate"
-	 tooltip-class="bottom"
-	 [class.active]="locationPickerExpand"
->
+<div class="box" id="geoPreSearch">
 	<button ansynComboBoxTrigger
 			(click)="toggleLocationPicker()"
+			[attr.tooltip-value]="statusBarConfig?.toolTips?.geoFilter | translate"
+			tooltip-class="bottom"
+			[class.active]="locationPickerExpand"
 			[isActive]="locationPickerExpand"
 			[withArrow]="false"
 			icon="icon icon-status-bar-geo"
@@ -21,9 +21,6 @@
 
 <!-- Time -->
 <div class="box"
-	 [attr.tooltip-value]="this.timePickerPresetsExpand ? null : statusBarConfig?.toolTips?.timeFilterEdit | translate"
-	 tooltip-class="bottom"
-	 [class.active]="timePickerExpand"
 	 (ansynClickOutside)="closeTimePicker()"
 	 [extraClass]="'owl-dt-container presets'"
 	 [trigger]="timePickerTrigger?.optionsTrigger?.nativeElement"
@@ -31,6 +28,9 @@
 	<button ansynComboBoxTrigger
 			#timePickerTrigger
 			(click)="toggleTimePickerPresets()"
+			[attr.tooltip-value]="statusBarConfig?.toolTips?.timeFilterEdit | translate"
+			tooltip-class="bottom"
+			[class.active]="timePickerPresetsExpand"
 			[isActive]="timePickerPresetsExpand"
 			[withArrow]="false"
 			icon="icon icon-status-bar-time"
@@ -49,21 +49,20 @@
 
 </div>
 
-<!-- data input filter-->
-<div class="box" id="dataInputsPreSearch"
-	 [attr.tooltip-value]="statusBarConfig?.toolTips?.dataInputFilter | translate"
-	 tooltip-class="bottom"
-	 [class.active]="dataInputFilterExpand"
->
-	<button ansynComboBoxTrigger
-			#trigger
-			(click)="toggleDataInputFilter()"
-			icon="icon icon-input-filter small"
-			[isActive]="dataInputFilterExpand"
-			[withArrow]="false"
-			class="button">
-		<span class="title">{{'Type' | translate}} - {{ dataInputFilterTitle | translate }}</span>
-	</button>
+	<!-- data input filter-->
+	<div class="box" id="dataInputsPreSearch">
+		<button ansynComboBoxTrigger
+				#trigger
+				(click)="toggleDataInputFilter()"
+				icon="icon icon-input-filter small"
+				[attr.tooltip-value]="statusBarConfig?.toolTips?.dataInputFilter | translate"
+				tooltip-class="bottom"
+				[class.active]="dataInputFilterExpand"
+				[isActive]="dataInputFilterExpand"
+				[withArrow]="false"
+				class="button">
+			<span class="title">{{'Type' | translate}} - {{ dataInputFilterTitle | translate }}</span>
+		</button>
 
 	<ansyn-tree-view
 		*ngIf="dataInputFilterExpand"
