--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
@@ -14,7 +14,7 @@
 	</button>
 
 	<ansyn-location-picker
-		*ngIf="locationPickerExpand"
+		*ngIf="isActive('LocationPicker')"
 		[geoFilter]="geoFilterTitle">
 	</ansyn-location-picker>
 </div>
