Don't let the sensor type column overflow

--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
@@ -183,6 +183,8 @@
 
 					div.source-type {
 						margin-left: 43px !important;
+						overflow: hidden;
+						text-overflow: ellipsis;
 					}
 
 					div.results-table-case-name-col {
