--- a/src/app/@ansyn/ansyn/modules/status-bar/components/filters-panel/filters-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/filters-panel/filters-panel.component.html
@@ -9,7 +9,7 @@
 			[withArrow]="false"
 			(click)="expandFilter(filter.modelName)">
 		<span class="title">{{filter.displayName | translate}}</span>
-		<span class="filter-counter">{{getTitle(filter.modelName)}}</span>
+		<span class="filter-counter" *ngIf="filters[filter.modelName]?.title?.lenght">{{filters[filter.modelName]?.title}}</span>
 	</button>
 
 	<div class="filter-container scrolled">
