--- a/src/app/@ansyn/ansyn/modules/status-bar/components/case-panel/case-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/case-panel/case-panel.component.less
@@ -3,16 +3,28 @@
 :host {
 	&:extend(.status-bar-panel);
 	width: 115px;
-	flex-flow: wrap;
+	flex-direction: column;
 	border-left: 1px solid @status-bar-delimiter;
 	user-select: none;
+	margin-right: 12px;
 
-	div {
+	hr {
+		margin: 0;
+		width: calc(100% + 12px);
+		background-color: @status-bar-delimiter;
+		border-color: @status-bar-delimiter;
+	}
+
+	.row {
 		display: flex;
+		flex: 1;
+		height: calc(@status-bar-height / 2);
+		box-sizing: border-box;
+		justify-content: flex-start;
+		align-items: center;
 
 		&.top {
 			padding: 3px 5px;
-			border-bottom: 1px solid @status-bar-delimiter;
 
 			span {
 				overflow: hidden;
@@ -21,17 +33,18 @@
 		}
 
 		&.bottom {
+			display: flex;
+			flex-direction: row;
 			justify-content: space-between;
+			align-items: baseline;
+			padding: 2px 0;
 
 			div {
 				display: flex;
-				flex: 1;
-				justify-content: flex-start;
 				align-items: center;
 
 				&.share {
 					cursor: pointer;
-					margin-right: 5px;
 				}
 			}
 
@@ -44,6 +57,7 @@
 @media screen and (max-width: 1280px) {
 	:host {
 		width: 95px;
+
 		.bottom {
 			div.share {
 				justify-content: flex-end;
