--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
@@ -6,6 +6,7 @@
 :host {
 	&:extend(.status-bar-panel);
 
+
 	.box {
 		margin: 0 3px;
 
@@ -22,6 +23,9 @@
 			}
 		}
 
+		&.timePickerBox {
+			font-size: 13px;
+		}
 		&#geoPreSearch {
 			width: 150px;
 			span {
@@ -46,7 +50,7 @@
 		opacity: 0;
 		pointer-events: none;
 		font-family: @app-font;
-		font-size: 14px;
+		font-size: 13px;
 	}
 
 }
