Fixing favorites in results table (#3164)
* fixing badge after opening menu

* fixing only favorites overlay from showing

* fixing favorite overlays from not showing in results table

* fixing changedetectionerror

* refactor

* changing selector

* changing selector

* refactor

* fixing lint

* refactor

* fixing lint

* fixing lint

* fixing lint

* fixing effect

* fixing lint

* refactor after cr

* refactor after cr

* refactor after cr

* fixing tests

* fixing tests

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
@@ -48,20 +48,20 @@
 	></ansyn-timepicker>
 </div>
 
-	<!-- data input filter-->
-	<div class="box" id="dataInputsPreSearch">
-		<button ansynComboBoxTrigger
-				#trigger
-				(click)="toggleDataInputFilter()"
-				[attr.tooltip-value]="statusBarConfig?.toolTips?.dataInputFilter | translate"
-				tooltip-class="bottom"
-				[class.active]="dataInputFilterExpand"
-				icon="icon icon-input-filter"
-				[isActive]="dataInputFilterExpand"
-				[withArrow]="false"
-				class="button">
-			<span class="title">{{'Type' | translate}} - {{ dataInputFilterTitle | translate }}</span>
-		</button>
+<!-- data input filter-->
+<div class="box" id="dataInputsPreSearch">
+	<button ansynComboBoxTrigger
+			#trigger
+			(click)="toggleDataInputFilter()"
+			icon="icon icon-input-filter small"
+			[attr.tooltip-value]="statusBarConfig?.toolTips?.dataInputFilter | translate"
+			tooltip-class="bottom"
+			[class.active]="dataInputFilterExpand"
+			[isActive]="dataInputFilterExpand"
+			[withArrow]="false"
+			class="button">
+		<span class="title">{{'Type' | translate}} - {{ dataInputFilterTitle | translate }}</span>
+	</button>
 
 	<ansyn-tree-view
 		*ngIf="dataInputFilterExpand"
