add margin to screens

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/display-panel/display-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/display-panel/display-panel.component.html
@@ -1,5 +1,5 @@
 <ansyn-combo-box
-	buttonClass="display-button"
+	buttonClass="display-button screens"
 	direction="bottom"
 	name="layout"
 	[withArrow]="false"
