--- a/src/app/@ansyn/ansyn/modules/status-bar/components/display-panel/display-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/display-panel/display-panel.component.less
@@ -26,6 +26,10 @@
 			&:hover:not(.active) {
 				&:extend(.status-bar-button-hover);
 			}
+
+			&.screens span {
+				margin-right: 5px;
+			}
 		}
 	}
 
