add margin and fix width on search panel

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
@@ -25,16 +25,20 @@
 
 		&.timePickerBox {
 			font-size: 13px;
+
+			span {
+				margin-right: 5px;
+			}
 		}
 		&#geoPreSearch {
-			width: 150px;
+			width: 155px;
 			span {
 				overflow: hidden;
 				text-overflow: ellipsis;
 			}
 		}
 		&#dataInputsPreSearch {
-			width: 105px;
+			width: 110px;
 		}
 	}
 
