--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
@@ -54,7 +54,7 @@
 		<button ansynComboBoxTrigger
 				#trigger
 				(click)="toggleDataInputFilter()"
-				icon="icon icon-input-filter small"
+				icon="icon icon-input-filter"
 				[attr.tooltip-value]="statusBarConfig?.toolTips?.dataInputFilter | translate"
 				tooltip-class="bottom"
 				[class.active]="dataInputFilterExpand"
