--- a/src/app/@ansyn/ansyn/modules/status-bar/components/filters-panel/filters-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/filters-panel/filters-panel.component.html
@@ -24,7 +24,7 @@
 	<button ansynComboBoxTrigger
 			class="favorites"
 			[withArrow]="false"
-			[disabled]="disableOnlyFavoritesButton"
+			[disabled]="disableOnlyFavoritesButton && !onlyFavorite"
 			[attr.tooltip-value]="'Displays favorites overlays only' | translate"
 			tooltip-class="bottom"
 			(click)="showOnlyFavorites()">
