tweaks after zoom with Tal

--- a/src/app/@ansyn/ansyn/less/z-index-globals.less
+++ b/src/app/@ansyn/ansyn/less/z-index-globals.less
@@ -24,6 +24,7 @@
 @z-index-annotation-cotext-menu: 1;
 @z-index-annotation-cotext-menu-hover: 0;
 @z-index-annotation-cotext-menu-buttons: 2;
+@z-index-annotation-context-menu-color-button: 2;
 @z-index-map-rotation: 2;
 @z-index-imagery-status: 3;
 @z-index-credentials: 5000;
