fix style of status bar (#3175)
* margin button

* update icons

* update icons v2

* minor style change

* add margin to screens

* add margin and fix width on search panel

* style for small screen

* :green_heart: fix build-libs

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
@@ -6,6 +6,7 @@
 :host {
 	&:extend(.status-bar-panel);
 
+
 	.box {
 		margin: 0 3px;
 
@@ -22,15 +23,22 @@
 			}
 		}
 
+		&.timePickerBox {
+			font-size: 13px;
+
+			span {
+				margin-right: 5px;
+			}
+		}
 		&#geoPreSearch {
-			width: 150px;
+			width: 155px;
 			span {
 				overflow: hidden;
 				text-overflow: ellipsis;
 			}
 		}
 		&#dataInputsPreSearch {
-			width: 105px;
+			width: 110px;
 		}
 	}
 
@@ -46,7 +54,7 @@
 		opacity: 0;
 		pointer-events: none;
 		font-family: @app-font;
-		font-size: 14px;
+		font-size: 13px;
 	}
 
 }
