--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
@@ -19,7 +19,7 @@
 </div>
 
 <!-- Time -->
-<div class="box"
+<div class="box timePickerBox"
 	 (ansynClickOutside)="closeTimePicker()"
 	 [extraClass]="'owl-dt-container presets'"
 	 [trigger]="timePickerTrigger?.optionsTrigger?.nativeElement"
@@ -34,7 +34,7 @@
 			[withArrow]="false"
 			icon="icon icon-status-bar-time"
 			class="button">
-		<span class="title">{{timeSelectionTitle}}</span>
+		<span class="title" [innerHTML]="timeSelectionTitle"></span>
 	</button>
 
 	<ansyn-timepicker-presets *ngIf="isActive('TimePickerPreset')"
