Uploading table improvement

--- a/src/app/@ansyn/menu/menu/menu.component.less
+++ b/src/app/@ansyn/menu/menu/menu.component.less
@@ -87,10 +87,10 @@ div.menu-wrapper {
 					background: @application-secondary-color;
 					right: 20px;
 					top: 10px;
-					width: 22px;
+					width: 40%;
 					height: 21px;
-					font-size: 12px;
-					border-radius: 50%;
+					font-size: 14px;
+					border-radius: 40%;
 				}
 
 				img {
