--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
@@ -26,22 +26,23 @@
 			margin-bottom: 15px;
 
 			div.header-title {
-				font-size: 24px;
+				font-size: 21px;
 			}
 
 			div.box {
 				flex: 1;
+				right: 115px;
+				margin-top: 4px;
+				position: absolute;
 
 				.icon-status-bar-imagery-count {
-					margin-top: 6px;
 					position: absolute;
-					margin-left: 145px;
 				}
 				.overlay-count {
-					font-size: 17px;
-					margin-top: 7px;
+					font-size: 14px;
 					position: absolute;
-					margin-left: 170px;
+					margin-top: 3px;
+					margin-left: 25px;
 				}
 			}
 		}
