--- a/src/app/@ansyn/menu/menu/menu.component.less
+++ b/src/app/@ansyn/menu/menu/menu.component.less
@@ -87,10 +87,13 @@ div.menu-wrapper {
 					background: @application-secondary-color;
 					right: 20px;
 					top: 10px;
-					width: 40%;
+					min-width: 30px;
 					height: 21px;
 					font-size: 14px;
 					border-radius: 40%;
+					padding-top: 2px;
+					padding-right: 2px;
+					padding-left: 2px;
 				}
 
 				img {
