--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
@@ -22,6 +22,17 @@
 			}
 		}
 
+		span.title {
+			outline: none;
+
+			&::selection {
+				background: @status-bar-panels;
+			}
+			&.error {
+				color: red;
+			}
+		}
+
 		&#geoPreSearch {
 			width: 150px;
 			span {
