--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
@@ -22,22 +22,23 @@
 			}
 		}
 
-		span.title {
-			outline: none;
-
-			&::selection {
-				background: @status-bar-panels;
-			}
-			&.error {
-				color: red;
-			}
-		}
-
 		&.timePickerBox {
 			font-size: 13px;
 
-			span:last-child {
-				margin-right: 5px;
+			span.title {
+				outline: none;
+				cursor: text;
+
+				&::selection {
+					background: @status-bar-panels;
+				}
+				&.error {
+					color: red;
+				}
+
+				&:last-child {
+					margin-right: 5px;
+				}
 			}
 		}
 		&#geoPreSearch {
