--- a/src/app/@ansyn/ansyn/modules/filters/components/filter-container/filter-container.component.html
+++ b/src/app/@ansyn/ansyn/modules/filters/components/filter-container/filter-container.component.html
@@ -56,14 +56,8 @@
 			</div>
 		</div>
 
-		<div class="show-more-less"
-			 *ngIf="!isLongFiltersList && !isGotSmallListFromProvider && !showOnlyFavorite && !metadataFromState.collapse">
-			<span (click)="toggleShowMoreLess()">{{'SHOW MORE' | translate}}</span>
-		</div>
-
-		<div class="show-more-less"
-			 *ngIf="isLongFiltersList && !isGotSmallListFromProvider && !showOnlyFavorite && !metadataFromState.collapse">
-			<span (click)="toggleShowMoreLess()">{{'SHOW LESS' | translate}}</span>
+		<div class="show-more-less" *ngIf="!isGotSmallListFromProvider && !showOnlyFavorite && !metadataFromState.collapse">
+			<span (click)="toggleShowMoreLess()">{{!isLongFiltersList ? 'SHOW MORE' : 'SHOW LESS' | translate}}</span>
 		</div>
 
 	</ng-template>
