hotfix search is happend from everywhere

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
@@ -20,7 +20,7 @@
 
 <!-- Time -->
 <div class="box timePickerBox"
-	 (ansynClickOutside)="closeTimePicker()"
+	 (ansynClickOutside)="shouldCloseTimePicker()"
 	 [extraClass]="'owl-dt-container presets'"
 	 [trigger]="timePickerTrigger?.optionsTrigger?.nativeElement"
 >
