All-Data-Input-Margin

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.less
@@ -15,9 +15,10 @@
 	}
 
 	/deep/ .treeview-container .row-item, /deep/ div.form-check-inline {
-		display: flex;
+		display: block;
 		color: ghostwhite;
 		padding: 5px 20px;
+		margin-bottom: .3rem;
 
 		.form-check-label {
 			cursor: pointer !important;
