--- a/src/app/@ansyn/ansyn/modules/status-bar/components/filters-panel/filters-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/filters-panel/filters-panel.component.html
@@ -1,4 +1,4 @@
-<div class="filter" *ngFor="let filter of filters">
+<div class="filter" *ngFor="let filter of filters | slice:0:2">
 	<button ansynComboBoxTrigger
 			[disabled]="onlyFavorite"
 			[attr.tooltip-value]="getFilterTooltip(filter.displayName) | translate"
@@ -9,7 +9,8 @@
 			[withArrow]="false"
 			(click)="expandFilter(filter.modelName)">
 		<span class="title">{{filter.displayName | translate}}</span>
-		<span class="filter-counter" [class.hide]="filtersMap[filter.modelName]?.title?.length === 0">{{filtersMap[filter.modelName]?.title}}</span>
+		<span class="filter-counter"
+			  [class.hide]="filtersMap[filter.modelName]?.title?.length === 0">{{filtersMap[filter.modelName]?.title}}</span>
 	</button>
 
 	<div class="filter-container scrolled">
@@ -20,8 +21,8 @@
 	</div>
 </div>
 
-<div class="filter">
-	<button ansynComboBoxTrigger
+<div class="filter more-or-favorites">
+	<button ansynComboBoxTrigger *ngIf="filters.length < 3; else moreFiltersBtn"
 			class="favorites"
 			[withArrow]="false"
 			[disabled]="disableOnlyFavoritesButton && !onlyFavorite"
@@ -32,4 +33,32 @@
 		   [ngClass]="onlyFavorite ? 'icon-favorite-full'  : 'icon-favorite-empty'"></i>
 		<span class="title">{{'Favorites' | translate}}</span>
 	</button>
+	<ng-template #moreFiltersBtn>
+		<button ansynComboBoxTrigger
+				class="more-filters"
+				[withArrow]="false"
+				[attr.tooltip-value]="'More Filters' | translate"
+				tooltip-class="bottom"
+				(click)="expandFilter(MORE_FILTERS)">
+			<i class="icon icon-more"></i>
+		</button>
+		<div *ngIf="expand[MORE_FILTERS]" class="more-filters-container scrolled">
+			<button ansynComboBoxTrigger
+					class="favorites"
+					[withArrow]="false"
+					[disabled]="disableOnlyFavoritesButton && !onlyFavorite"
+					[attr.tooltip-value]="'Displays favorites overlays only' | translate"
+					tooltip-class="left"
+					(click)="showOnlyFavorites(false)">
+				<i class="icon"
+				   [ngClass]="onlyFavorite ? 'icon-favorite-full'  : 'icon-favorite-empty'"></i>
+				<span class="title">{{'Favorites' | translate}}</span>
+			</button>
+			<div>
+				<ansyn-filter-container *ngFor="let filter of filters | slice:2"
+										[filter]="filter">
+				</ansyn-filter-container>
+			</div>
+		</div>
+	</ng-template>
 </div>
