--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
@@ -9,7 +9,7 @@
 			[withArrow]="false"
 			icon="icon icon-status-bar-geo"
 			class="button">
-		<span class="title">{{geoFilterTitle}} ({{geoFilterCoordinates}})</span>
+		<span class="title">{{geoFilterTitle | translate}} ({{geoFilterCoordinates}})</span>
 	</button>
 
 	<ansyn-location-picker
