changing the sensor column to be the sensor name instead of the source type

--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
@@ -39,7 +39,7 @@
 				</div>
 
 				<div class="results-table-body-col source-type">
-					{{overlay.sourceType | translate}}
+					{{overlay.sensorName | translate}}
 				</div>
 
 				<div class="results-table-body-col overlay-type">
