integration with new geo coder

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -158,8 +158,7 @@
     },
 	"mapSearch": {
 		"active": true,
-		"url": "http://dev.virtualearth.net/REST/v1/Locations?locality=$searchString&maxResults=1&key=$apiKey",
-		"apiKey": "AofqJGk-uEej_Pv7hkbpXh6H3pb54luGZj6lfe90ksZEoBY-JmgTwGE2s9TF6peC"
+		"url": "https://nominatim.openstreetmap.org/search.php?q="
 	},
 	"floatingPositionSuffix": "{{ getv "/ansyn/floation/position/suffix" "" }}",
 	"floatingPositionSystem" : "WGS84",
