--- a/src/app/@ansyn/map-facade/components/map-search-box/map-search-box.component.html
+++ b/src/app/@ansyn/map-facade/components/map-search-box/map-search-box.component.html
@@ -1,31 +1,22 @@
 <form *ngIf="show" (reset)="control.setValue('')" (submit)="onSubmit()">
-	<input *ngIf="geocoderService.onlyCoordinates; else fullSearch"
-		type="text" [placeholder]="geocoderService.placeholder | translate"
-		   [formControl]="control">
-	<ng-template #fullSearch>
-		<input type="text" [placeholder]="geocoderService.placeholder | translate"
-			   [formControl]="control"
-			   [matAutocomplete]="auto">
+	<input type="text" [placeholder]="'Search' | translate"
+		   [formControl]="control"
+		   [matAutocomplete]="auto">
 	<mat-autocomplete #auto="matAutocomplete" [panelWidth]="autoCompleteWidth + 'px'">
-		<mat-option *ngIf="loading; else loaded;" disabled>
+		<mat-option *ngIf="loading;" disabled>
 			{{'loading results' | translate}}
 		</mat-option>
-		<ng-template #loaded>
-			<ng-template *ngIf="!error; else catchError">
-				<mat-option *ngFor="let location of locations | slice:0:5"
-							(onSelectionChange)="goToLocation(location.point)"
-							[value]="location.name">
-					{{location.name}}
-				</mat-option>
-			</ng-template>
-			<ng-template #catchError>
-				<mat-option disabled>
-					{{error | translate}}
-				</mat-option>
-			</ng-template>
-		</ng-template>
+		<mat-option *ngIf="error" disabled>
+			{{'No Results' | translate}}
+		</mat-option>
+		<mat-option *ngFor="let location of locations | slice:0:5"
+					(onSelectionChange)="goToLocation(location.point)"
+					[value]="location.name">
+			{{location.name}}
+		</mat-option>
+
+
 	</mat-autocomplete>
-</ng-template>
 	<button type="submit"><i class="fa fa-search"></i></button>
 	<button type="reset" [hidden]="!control.value"><i class="fa fa-times"></i></button>
 </form>
