adding infinite scroll to the results and cases table

--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
@@ -93,8 +93,8 @@
 		div.results-table-body {
 			direction: rtl;
 			display: block;
-			overflow-y: auto;
-			height: 80vh;
+			overflow: auto;
+			max-height: 80vh;
 
 			div.results-table-body-row-data:hover {
 				background-color: @background-color-7;
