--- a/src/app/@ansyn/ansyn/modules/menu-items/cases/components/cases-table/cases-table.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/cases/components/cases-table/cases-table.component.less
@@ -33,8 +33,8 @@ div.cases-table {
 
 	div.cases-table-body {
 		display: block;
-		overflow-y: auto;
-		height: 80vh;
+		overflow: auto;
+		max-height: 80vh;
 
 		div.cases-table-body-row:hover + div.cases-table-body-row hr {
 			display: block;
