--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
@@ -24,7 +24,7 @@
 
 		<div class="results-table-body-row"
 			 *ngFor="let overlay of overlays"
-			 (click)="openOverlay(overlay)"
+			 (click)="openOverlay(overlay.id)"
 			 (mouseenter)="onMouseOver($event, overlay.id)"
 			 (mouseleave)="onMouseOut()"
 			 [class.selected]="selectedOverlayId === overlay.id">
