Adding infinite scroll (#3241)
* fixing badge after opening menu

* adding infinite scroll to the results and cases table

* fixing tests

* fix sort by sensor name

* fixing overflow

* refactor after cr

* fixing libs

* fixing libs

* fixing tests

* fixing tests

* refactor after cr

* refactor after cr

* clearing state

* clearing state

* clearing state

* clearing state

* clearing state

--- a/src/app/@ansyn/ansyn/modules/menu-items/cases/components/cases-table/cases-table.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/cases/components/cases-table/cases-table.component.less
@@ -34,7 +34,7 @@ div.cases-table {
 	div.cases-table-body {
 		display: block;
 		overflow-y: auto;
-		height: 80vh;
+		max-height: 80vh;
 
 		div.cases-table-body-row:hover + div.cases-table-body-row hr {
 			display: block;
