--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
@@ -94,7 +94,7 @@
 			direction: rtl;
 			display: block;
 			overflow-y: auto;
-			height: 80vh;
+			max-height: 80vh;
 
 			div.results-table-body-row-data:hover {
 				background-color: @background-color-7;
