--- a/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.less
@@ -15,7 +15,7 @@
 	}
 
 	/deep/ .treeview-container .row-item, /deep/ div.form-check-inline {
-		display: block;
+		display: flex;
 		color: ghostwhite;
 		padding: 5px 20px;
 		margin-bottom: .3rem;
