--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
@@ -27,6 +27,7 @@
 		display: flex;
 		height: 100%;
 		width: 100%;
+		position: relative;
 		overflow: hidden;
 		flex-direction: row;
 		background: @background-color-0;
